# PharmaCare

./: .env  .env.docker  .firebaserc  .gitignore  DEPLOYMENT.md  Deployment.md  FRONTEND_INTEGRATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  README.md  SMART_SHELF_QUICK_START.md  SMART_SHELF_TESTING_GUIDE.md  cloudformation-minimal.yaml  docker-compose.monitoring.yaml  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-add-shelf.md  validate.sh
.claude/: settings.local.json
.github/: CODEOWNERS
ai_assistant/: .dockerignore  .env.example  .flake8  Deployment.md  Dockerfile  README.md  agent_tools.py  agent_tools_agent.py  cloudformation.yaml  main.py  pyproject.toml  requirements.txt  validate_setup.py
chat-app-sat/: .env  .gitignore  agent_tools.py  agent_tools_agent.py  main.py
chat-bot/: .gitignore  agent_tools.py  debug_imports.py  main.py  models.py  requirements.txt  seed.py  seed_data.json  test_regex.py
monitoring/: README.md
ph_backend/: .dockerignore  .env.example  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  VALKEY_CACHE.md  eslint.config.js  firebase-service-account.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  test-firebase.ts  test-smart-shelf.http  tsconfig.json
ph_frontend/: .eslintrc.json  .prettierignore  .prettierrc  Dockerfile  POS_MODE_FEATURES.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
pharmaApp/: BACKEND_CONNECTION_GUIDE.md  CHECKLIST.md  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  pubspec.yaml
(+209 files in other folders)
